# django-security

./: .flake8  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python.yml
phoenix/: manage.py
phoenix/api/: apps.py  serializers.py  urls.py  views.py
phoenix/homepage/: urls.py  views.py
phoenix/phoenix/: asgi.py  settings.py  urls.py  wsgi.py
phoenix/static_dev/css/: main.7c10b21a.css  main.7c10b21a.css.map
phoenix/static_dev/frontend/my-react-app/: package-lock.json  package.json
phoenix/static_dev/frontend/my-react-app/src/: ContactForm.css  ContactForm.js  Footer.css  Footer.js  Header.css  Header.js  HomePage.css  HomePage.js  styles.css
phoenix/static_dev/frontend/my-react-app/src/components/: ContactForm.js  ToDo.css  ToDo.js  Weather.js
phoenix/static_dev/frontend/phoenix/templates/: index.html
phoenix/static_dev/frontend/vue-js/: package-lock.json  package.json
phoenix/static_dev/frontend/vue-js/public/: index.html
phoenix/static_dev/frontend/vue-js/src/: App.vue  main.js  router.js
phoenix/static_dev/js/: 453.de759066.chunk.js  453.de759066.chunk.js.map  main.8419c32e.js  main.8419c32e.js.map  main.899c934d.js  main.899c934d.js.map
phoenix/static_dev/phoenix-studio/: package-lock.json  package.json
phoenix/static_dev/phoenix-studio/src/: App.js
phoenix/static_dev/vue/js/: app.395c9bb6.js  app.395c9bb6.js.map  chunk-vendors.c2aa632b.js  chunk-vendors.c2aa632b.js.map
phoenix/templates/homepage/: home.html
phoenix/user/: admin.py  apps.py  models.py
phoenix/user/migrations/: 0001_initial.py
(+22 files in other folders)
